--- a/style.css
+++ b/style.css
@@ -659,6 +659,7 @@ footer img{
         display: flex;
         width: 100%;
         align-items: center;
+        height: 90px;
         /* padding: 10px 0px;
         margin: auto; 
         justify-content: space-between; */
@@ -713,23 +714,30 @@ footer img{
         background-color: white;
         width: 20%;
         text-align: center;
+        height: 80px;
     }
 
     .filtersection{
         display: grid;
         /* align-items: left; */
         /* padding: 10px; */
-        border: solid 0.5px grey;
+        border: none 0.5px grey;
         border-radius: 10px;
         /* margin-left: -40px; */
         margin-top: 7px;
-        width: 60px;
+        width: 40px;
         margin: auto;
+        
     
     }
 
+    .filtersection p{
+        display: none;
+    }
+
     footer{
-        display: grid;
+        display: none;
+        /* display: grid; */
         grid-template-columns: 50% ;
         align-items: center;
         height: 100px;
@@ -741,6 +749,23 @@ footer img{
         z-index: 20px;
         
     
+    }
+
+    .mapsection{
+        display: flex;
+        text-align: center;
+        padding: 20px;
+        position: fixed;
+        right: 40%;
+        bottom: 80px;
+        background: rgb(46, 46, 46);
+        width: 100px;
+        height: 50px;
+        margin: auto;
+        border-radius: 30px;
+        align-items: center;
+        cursor: pointer;
+     
     }
 }
 
